--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -26,11 +26,16 @@ subsets:
 enums:
   DamageTreatmentEnum:
     permissible_values:
-      none:
-      partial-udg:
-      full-udg:
-      enriched:
+      no-removal:
+        description: Library preparation-derived C to T misincorporations have not been removed using laboratory techniques.
+      partial-removal:
+        description: Library preparation-derived C to T misincorporations have been partially removed using laboratory techniques such as with an early stopped uracil-DNA glycosylase (UDG) or USER treatment, leaving a small number of nucleotides with damage at ends of molecules.
+      complete-removal:
+        description: Library preparation-derived C to T misincorporations have been entirely removed using laboratory techniques such as with complete uracil-DNA glycosylase (UDG) or USER treatment, leaving no nucleotides with damage at ends of molecules.
+      damage-selection:
+        description: Library preparation-derived technique that retain only molecules containing damage, and have discarded those without damage.
       other:
+        description: Other type of damage treatment that are further described in other method description terms.
   LibTypeEnum:
     permissible_values:
       amplicon:
@@ -130,7 +135,7 @@ slots:
     title: Damage treatment type
     examples:
       - value: none
-      - value: partial-udg
+      - value: partial-removal
     in_subset:
       - sequencing
     keywords:
