Update description of `samp_age_range_youngest_limit` to specify dates in years, and to prefer specific dates over relative dates

--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -417,10 +417,10 @@ slots:
     annotations:
       Expected_value: age value corresponding to unit
     description: >-
-      The youngest possible age of the sample.
+      The youngest possible age of the sample in years, with the specific year unit defined in samp_age_range_youngest_unit.
       Youngest refers to the time closest to present day.
-      If a sample has only a single age value, the value from samp_age_range_oldest_limit can be repeated.
       Sample age refers to a period of time in the past, such as when an organism was living and then died, not the biological age.
+      Specify a date that is as specific to the sample as possible (e.g., prefer direct dates over rough relative estimates).
     title: sample age range youngest limit
     examples:
       - value: "100000"
