--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -151,14 +151,12 @@ slots:
     range: datetime ## or name of defined enum as above
     required: false
     recommended: true
-  ethical_authority:
+  permit_authority:
     annotations:
-      Expected_value: name of authority providing ethical approval
+      Expected_value: Name of authority providing permission or ethical approval.
     description: >-
-      Name of the authorit(ies) or institution(s) that awarded sampling and 
-      analysis (e.g. human remains) and/or export permission 
-      (e.g. animal remains)
-    title: ethical authority
+      Name of the authorit(ies) or institution(s) that granted sampling and analysis (e.g. human remains) and/or export permission (e.g. animal remains), as well any form of ethical approval (whether from institutional reasearch ethics boards (REB/IRBs etc), or indigenous or native community associations) if available. 
+    title: permit authority
     examples:
       - value: "University of Copenhagen"
       - value: "Federal Foreign Office (Germany)"
@@ -172,12 +170,10 @@ slots:
     range: string
     required: false
     recommended: true
-  ethical_date:
+  permit_date:
     description: >-
-      Date of award of ethical/export permission. The date can be right truncated 
-      i.e. all of these are valid times: 2008-01-23; 2008-01; 2008; 
-      Except: 2008-01; 2008 all are ISO8601 compliant
-    title: date of ethical approval
+      Date on which the permit was granted. The date can be right truncated i.e. all of these are valid times: 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
+    title: date of permit approval
     examples:
       - value: "2023-12-01"
     in_subset:
@@ -186,12 +182,10 @@ slots:
     range: datetime
     required: false
     recommended: true
-  ethical_id:
+  permit_id:
     description: >-
-      The permissions code, ID, document, or similar provided by any authority 
-      (socal, legal, academic etc.) associated with approval of the analysis of 
-      this particular sample.
-    title: ethical permit or approval ID
+      The permissions code, ID, document, or similar provided by any authority (ethical, local, legal, academic etc.) associated with the approval of the analysis of this particular sample, if available.
+    title: permit or approval ID
     examples:
       - value: "DE-123-JK"
     in_subset:
@@ -290,13 +284,12 @@ slots:
     recommended: true
   lib_type:
     description: >-
-      The type of library created, i.e., amplicon, enriched, or shotgun. 
-      Amplicon based is a library that has been amplified to target a specific single region of a genome (e.g. a specific gene). 
-      An enriched library is a library has had a particular genome or genome regions 'captured' or enriched typically via baits or probes.
-      A shotgun library has had no type of targeted enrichment for a particular gene or genome.
+      The type of library created, i.e., amplicon, enriched, or shotgun. Amplicon based is a library that has been amplified to target a specific single region of a genome (e.g. a specific gene).  An enriched library is a library has had a particular genome or genomic regions 'captured' or enriched typically via baits or probes. A shotgun library has had no type of targeted enrichment for a particular gene or genome, it is the indiscriminate sequencing all the DNA contained in a genomic library.
     title: library type
     examples:
+      - value: shotgun
       - value: amplicon
+      - value: enriched
     in_subset:
       - sequencing
     keywords:
@@ -305,6 +298,7 @@ slots:
     slot_uri: MIXS:999999910
     range: LibTypeEnum
     required: false
+    recommended: true
   neg_cont_status:
     description: >-
       Specify whether the sample is a negative control or not.
@@ -535,7 +529,7 @@ slots:
       Expected_value: description of health related observation on ancient remains
     description: >-
       Describe briefly any relevant palaeopathological or health-related observations of the remains of the individual under study.
-    title: palaeopathology status.
+    title: palaeopathology status
     examples:
       - value: "Osteoporosis."
       - value: "Parasites found in pelvic area."
@@ -570,12 +564,12 @@ slots:
     range: BioCulturalLabel #enum value
     required: false
     recommended: false
-  ethics_perm_scope:
+  permit_scope:
     annotations:
-      Expected_value: Description of the scope of ethical permissions for data use
+      Expected_value: Description of the scope of ethical permissions for data use.
     description: >-
-      Description of the original scope and permissions of the research on the genetic material, as was approved by the ethical authority (e.g. bacteria only, DNA only, bacteria and human, no host read analysis allowed).
-    title: ethical Permissions & Scope
+      Description of the original scope and permissions of the research on the genetic material, as was approved by a legal or ethical authority (e.g. bacteria only, DNA only, bacteria and human, no host read analysis allowed). It should be noted that all uploaded data will be public and thus should be covered by the scope of the permits and approvals.
+    title: permit scope
     examples:
       - value: "Defined scope only includes the study of bacterial sequences and any human sequence is not covered under the agreement."
     in_subset:
@@ -590,10 +584,9 @@ slots:
     recommended: true
   host_body_preservation_state:
     annotations:
-      Expected_value: Description of the preservation of the sampled (ancient) organism/host
+      Expected_value: Description of the preservation of the sampled (ancient) organism/host.
     description: >-
-      Description of the state of the sampled (ancient) organism/host as originally preserved in the burial environment, e.g. if the the sample was artificially or naturally (fully/partially) mummified at the time of death.
-    title: ancient body preservation state
+      Description of the state of the sampled (ancient) organism/host as originally preserved in the burial environment or in the context museomics (eg. taxidermied or pinned), e.g. if the the sample was artificially or naturally (fully/partially) mummified at the time of death.
     examples:
       - value: "complete artificial mummification."
       - value: "natural partial mummification."
