--- a/src/mixs/schema/ancient.yml
+++ b/src/mixs/schema/ancient.yml
@@ -155,7 +155,7 @@ slots:
     annotations:
       Expected_value: Name of authority providing permission or ethical approval.
     description: >-
-      Name of the authorit(ies) or institution(s) that granted sampling and analysis (e.g. human remains) and/or export permission (e.g. animal remains), as well any form of ethical approval (whether from institutional reasearch ethics boards (REB/IRBs etc), or indigenous or native community associations) if available. 
+      Name of the authorit(ies) or institution(s) that granted sampling and analysis (e.g. human remains) and/or export permission (e.g. animal remains), as well any form of ethical approval (whether from institutional research ethics boards such as REB or IRBs, or indigenous or native community associations), if available. 
     title: permit authority
     examples:
       - value: "University of Copenhagen"
@@ -172,7 +172,7 @@ slots:
     recommended: true
   permit_date:
     description: >-
-      Date on which the permit was granted. The date can be right truncated i.e. all of these are valid times: 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
+      Date on which a permit was granted. The date can be right truncated i.e. all of these are valid times: 2008-01-23; 2008-01; 2008; Except: 2008-01; 2008 all are ISO8601 compliant.
     title: date of permit approval
     examples:
       - value: "2023-12-01"
@@ -184,7 +184,7 @@ slots:
     recommended: true
   permit_id:
     description: >-
-      The permissions code, ID, document, or similar provided by any authority (ethical, local, legal, academic etc.) associated with the approval of the analysis of this particular sample, if available.
+      A permit ID, code, or any form of identify provided by any authority (ethical, local, legal, academic etc.) associated with the approval of the analysis of this particular sample, if available.
     title: permit or approval ID
     examples:
       - value: "DE-123-JK"
@@ -284,7 +284,7 @@ slots:
     recommended: true
   lib_type:
     description: >-
-      The type of library created, i.e., amplicon, enriched, or shotgun. Amplicon based is a library that has been amplified to target a specific single region of a genome (e.g. a specific gene).  An enriched library is a library has had a particular genome or genomic regions 'captured' or enriched typically via baits or probes. A shotgun library has had no type of targeted enrichment for a particular gene or genome, it is the indiscriminate sequencing all the DNA contained in a genomic library.
+      The type of library created, i.e., amplicon, enriched, or shotgun. An amplicon library is a library that has been amplified to target a single specific region of a genome (e.g. a specific gene).  An enriched library is a library has had a particular genome, or multiple genomic regions/positions 'captured' or enriched typically via baits/probes. A shotgun library has undergone no type of targeted amplification/enrichment for a particular genomic region or genome, i.e., random sequencing of any DNA molecule contained in a genomic library.
     title: library type
     examples:
       - value: shotgun
